AB-Testing/app-golang.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-golang
  labels:
    app: trivago
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: trivago
    version: v1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-golang
  labels:
    app: trivago
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivago
      version: v1.0.0
  template:
    metadata:
      labels:
        app: trivago
        version: v1.0.0
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9101"
    spec:
      containers:
      - name: trivago
        image: docker.io/tsrik007/trivago-golang
        ports:
        - name: http
          containerPort: 8080
        - name: probe
          containerPort: 8086
        livenessProbe:
          httpGet:
            path: /live
            port: probe
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: probe
          periodSeconds: 5
