AB-Testing/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: trivago
  labels:
    app: trivago
spec:
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - trivago.local
