AB-Testing/virtualservice-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trivago
  labels:
    app: trivago
spec:
  hosts:
    - trivago.local
  gateways:
    - trivago
  http:
    - route:
        - destination:
            host: trivago-golang
          weight: 70
        - destination:
            host: trivago-java
          weight: 30
